--- a/src/styles/animation.scss
+++ b/src/styles/animation.scss
@@ -1,31 +1,9 @@
-// *, :after, :before {
-//     box-sizing: border-box;
-// }
-
-// body {
-//   overflow-x: hidden;
-//   overflow-y: scroll;
-// }
-
-// main.main {
-//   overflow: hidden;
-//   position: fixed;
-//   height: 100vh;
-//   width: 100vw;
-//   top: 0;
-//   left: 0;
-//   right: 0;
-//   bottom: 0;
-// }
-
-// .scroll-content {
-//   position: absolute;
-//   overflow: hidden;
-//   z-index: 10;
-//   backface-visibility: hidden;
-//   transform-style: preserve-3d;
-//   will-change: transform;
-// }
+.c-scrollbar {
+  display: none;
+  &:last-of-type {
+    display: block;
+  }
+}
 
 /*! locomotive-scroll v4.1.3 | MIT License | https://github.com/locomotivemtl/locomotive-scroll */
 html.has-scroll-smooth {
